# autoware_lanelet2_to_clipgt

./: .gitignore  pyproject.toml
src/autoware_lanelet2_to_clipgt/: __init__.py  __main__.py  converter.py  projection.py  schemas.py  visualize.py
src/autoware_lanelet2_to_clipgt/conf/: config.yaml
src/autoware_lanelet2_to_clipgt/conf/map/: example.yaml  odaiba.yaml
src/autoware_lanelet2_to_clipgt/cosmos_transfer2_5/: __init__.py  converter.py  schemas.py  visualize.py
tests/: test_converter.py
