[project]
name = "autoware-lanelet2-to-clipgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "lanelet2-python-api-for-autoware",
    "mgrs>=1.5.0",
    "lxml>=5.2.2",
    "pyarrow>=24.0.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "matplotlib>=3.10.9",
    "hydra-core>=1.3.2",
]

[tool.uv.sources]
lanelet2-python-api-for-autoware = { git = "https://github.com/tier4/lanelet2_python_api_for_autoware", rev = "21cafbf9a855afbc4b89d4dfc3d299a411b64dde" }

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
